tooling: separate coverage from tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,6 @@ jobs:
 
       - name: Test
         run: pytest
+
+      - name: Coverage
+        run: pytest --cov=src/playlistparser --cov-report term
