fix: fix PYPI metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = attr: playlistparser.__version__
 author = Ville Säävuori
 author_email = ville@unessa.net
 summary = DJ playlist parsing tool
-description-file = README.md
-long-description-content-type = text/markdown
-requires-python = >=3.8
+long_description = file: README.md
+long_description_content_type = text/markdown
+requires_python = >=3.8
 license = AGPL
 url = https://github.com/slipmatio/playlistparser
 project_urls =
