--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = ville@unessa.net
 summary = DJ playlist parsing tool
 long_description = file: README.md
 long_description_content_type = text/markdown
-requires_python = >=3.8
+requires_python = >=3.7
 license = AGPL
 url = https://github.com/slipmatio/playlistparser
 project_urls =
@@ -16,6 +16,7 @@ classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
