--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "playlistparser"
-version = "0.1.0"
+version = "3.0.0-beta.10"
 description = "Add your description here"
 readme = "README.md"
 authors = [{ name = "Ville Säävuori", email = "ville@unessa.net" }]
