--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,13 @@ on:
       - 'src/**/*.py'
       - 'tests/**'
       - '.github/workflows/main.yml'
+      - 'uv.lock'
   pull_request:
     paths:
       - 'src/**/*.py'
       - 'tests/**'
       - '.github/workflows/main.yml'
+      - 'uv.lock'
   workflow_dispatch:
 
 jobs:
@@ -21,36 +23,48 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: ['3.11', '3.12', '3.13']
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.2.2
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5.3.0
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
+
+      - name: 'Install uv'
+        uses: hynek/setup-cached-uv@v2.3.0
+        with:
+          cache-dependency-path: '**/uv.lock'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: uv sync --dev
 
       - name: Test
-        run: pytest
+        run: uv run pytest
 
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.2.2
       - name: Setup Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5.3.0
+        with:
+          python-version: '3.13'
+
+      - name: 'Install uv'
+        uses: hynek/setup-cached-uv@v2.3.0
+        with:
+          cache-dependency-path: '**/uv.lock'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: uv sync --dev
 
       - name: Coverage
-        run: pytest --cov=src/playlistparser --cov-report xml
+        run: uv run pytest --cov=playlistparser --cov-report xml
 
       - name: Coverage Summary Report
-        uses: irongut/CodeCoverageSummary@v1.2.0
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
           filename: coverage.xml
           badge: true
@@ -58,7 +72,7 @@ jobs:
           output: 'both'
 
       - name: Add Coverage PR Comment
-        uses: marocchino/sticky-pull-request-comment@v2.2.0
+        uses: marocchino/sticky-pull-request-comment@v2.9.0
         if: github.event_name == 'pull_request'
         with:
           recreate: true
